analysis/low-level-api-fir/testdata/lazyResolve/errors/annotationWithNamedFunctionArgument.kt
@Anno(fun a() : String {

}())
class Top<caret>LevelClass
